cambios de imagenes y emprolijar css

--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -69,7 +69,7 @@
             </div>
     <section>   
     <section class="portada__textoActitud">   
-        <p class="texto__actitud">Nuestras premisas para una buena administracion</p>
+        <p class="texto__actitud">Premisas para una buena administracion</p>
             <ul class="ul___actitud">
                 <li>Honestidad y transparencia en el manejo de los fondos.</li>
                 <li>Eficiente organizacion contable administrativa</li>
