--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -31,27 +31,27 @@
         <section class="grid__container__1nosotros">
             <div class="grid__item grid__uno">
                 <div class="text-container">
-                    <p class="grid__texto1">Somos los mejores</p>
+                    <p class="grid__texto">Somos los mejores</p>
                 </div>
             </div>
             <div class="grid__item grid__dos">
                 <div class="text-container">
-                    <p class="grid__texto1">Somos  empaticos</p>
+                    <p class="grid__texto">Somos  empaticos</p>
                 </div>
             </div>
             <div class="grid__item grid__tres">
                 <div class="text-container">
-                    <p class="grid__texto1">Somos eficientes</p>
+                    <p class="grid__texto">Somos eficientes</p>
                 </div>    
             </div>
             <div class="grid__item grid__cuatro">
                 <div class="text-container">
-                    <p class="grid__texto1">Somos honestos</p>
+                    <p class="grid__texto">Somos honestos</p>
                 </div> 
             </div>
             <div class="grid__item grid__cinco">
-                <p class="grid__texto">Desde el año 1996, nos desempeñamos como administradores en Consorcios de Propiedad Horizontal ubicados en la Ciudad de Buenos Aires.</p>
-                <p class="grid__texto">Desarrollamos esta actividad en oficinas ubicadas en el microcentro, apoyada por consultores contables y legales.</p>   
+                <p class="grid__texto1">Desde el año 1996, nos desempeñamos como administradores en Consorcios de Propiedad Horizontal ubicados en la Ciudad de Buenos Aires.</p>
+                <p class="grid__texto1">Desarrollamos esta actividad en oficinas ubicadas en el microcentro, apoyada por consultores contables y legales.</p>   
             </div>
         </section>  
         
@@ -71,7 +71,7 @@
                     <li>Integrante del Consejo Directivo de la Cámara Argentina de la Propiedad Horizontal (2010-/2022), con el cargo de Vocal Titular.</li>
                     <li>Coordinador de Relaciones Públicas de la CAPHAI (2010-2022)</li>
                 </ul>
-                <a href="https://caphai.com.ar/"><p>https://Camara Argentina de la Propiedad Horizontal/</p></a>
+                <a href="https://caphai.com.ar/"><p class="p__link">https://Camara Argentina de la Propiedad Horizontal/</p></a>
             </div>    
         </section>
         
