--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -36,13 +36,13 @@
           </div>
           <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../recursos/Actitud 1.jpg" class="d-block w-100" alt="...">
+                <img src="../recursos/Actitud 1.jpg" class="d-block w-100" alt="Edifio">
               </div>
               <div class="carousel-item">
-                <img src="../recursos/Actitud 2.jpg" class="d-block w-100" alt="...">
+                <img src="../recursos/Actitud 2.jpg" class="d-block w-100" alt="Escritorio">
               </div>
               <div class="carousel-item">
-                <img src="../recursos/Actitud 3.jpg" class="d-block w-100" alt="...">
+                <img src="../recursos/Actitud 3.jpg" class="d-block w-100" alt="Grupo">
               </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
