Se emprolijaron vinculos de imagenes

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -12,7 +12,7 @@
     
    <header>
        <div class="header">
-            <img src="../recursos/Logo 1.jpg"alt="Buenos Aires" class="header__logo"/>
+            <img src="../recursos/logo_1.jpg"alt="Buenos Aires" class="header__logo"/>
             <h1>Contactanos</h1>
         </div>
         <nav>   
@@ -29,7 +29,7 @@
     <main>
         <section class="contacto">
             <div class="contacto__imagenes"> 
-                <img src="../recursos/Contacto 1.jpg" class="contacto__imagenes__uno"/>
+                <img src="../recursos/contacto_1.jpg" class="contacto__imagenes__uno"/>
             </div>
             <div class="contacto__texto">
                 <p>Te proponemos una entrevista personal y la elaboración de una propuesta particularizada de administración estudiando los temas que hacen a vuestro interés.</p>
