--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -12,7 +12,7 @@
 <body>
    <header>
        <div class="header">
-            <img src="../recursos/Logo 1.jpg"alt="Buenos Aires" class="header__logo"/>
+            <img src="../recursos/logo_1.jpg"alt="Buenos Aires" class="header__logo"/>
             <h1>Nuestro Portfolio</h1>
         </div>
         <nav>   
