--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -12,7 +12,7 @@
 
      <header>
          <div class="header">
-            <img src="../recursos/Logo 1.jpg" class="header__logo"/>
+            <img src="../recursos/logo_1.jpg" class="header__logo"/>
             <h1>Acerca de Nosotros</h1>
         </div>
         <nav>   
