--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="header">  
-            <img src="recursos/Logo 1.jpg" class="header__logo"/>
+            <img src="recursos/logo_1.jpg" class="header__logo"/>
             <h1>Estudio Buenos Aires</h1>  
         </div>     
         <nav>   
