--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -12,7 +12,7 @@
 
   <header>
     <div class="header">
-        <img src="../recursos/Logo 1.jpg"alt="Buenos Aires" class="header__logo"/>
+        <img src="../recursos/logo_1.jpg"alt="Buenos Aires" class="header__logo"/>
         <h1>Actitud Proactiva</h1>
     </div>
     <nav>   
@@ -36,13 +36,13 @@
           </div>
           <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../recursos/Actitud 1.jpg" class="d-block w-100" alt="Edifio">
+                <img src="../recursos/actitud_1.jpg" class="d-block w-100" alt="Edifio">
               </div>
               <div class="carousel-item">
-                <img src="../recursos/Actitud 2.jpg" class="d-block w-100" alt="Escritorio">
+                <img src="../recursos/actitud_2.jpg" class="d-block w-100" alt="Escritorio">
               </div>
               <div class="carousel-item">
-                <img src="../recursos/Actitud 3.jpg" class="d-block w-100" alt="Grupo">
+                <img src="../recursos/actitud_3.jpg" class="d-block w-100" alt="Grupo">
               </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
