--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"content="administracion consorcios, consorcios, propiedad horizontal, prehorizontalidad, honorarios administracion consorcios, administracion consorcios belgrano, administracion consorcios villa urquiza, ley 941, administracion consorcios ley, administrador consorcios, gcba administradores consorcios, caphai, camara de la propiedad horizontal, consejo de propietarios, asambleas de consorcios, codigo civil propiedad horizontal">
+    <meta name="description"content="La Mejor Administracion de Consorcios de la Ciudad de Buenos Aires. Somos una Empresa con Amplia Trayectoria en la Administración de Edificios de Propiedad Horizonal. ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Inicio</title>
+    <title>Inicio Estudio BA Administracion de Consorcios</title>
 </head>
 <body>
     <header>
@@ -36,13 +38,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="recursos/Buenos aires 1.jpg" class="d-block w-100" alt="imagen de puerto madero">
+                    <img src="recursos/buenosaires__1.jpg" class="d-block w-100" alt="imagen de puerto madero">
                   </div>
                 <div class="carousel-item">
-                    <img src="recursos/Buenos Aires 2.jpg" class="d-block w-100" alt="imagen del plaza congreso">
+                    <img src="recursos/buenosaires__2.jpg" class="d-block w-100" alt="imagen del plaza congreso">
                 </div>
                 <div class="carousel-item">
-                    <img src="recursos/Buenos Aires 3.jpg" class="d-block w-100" alt="imagen de plaza de mayo">
+                    <img src="recursos/buenosaires__3.jpg" class="d-block w-100" alt="imagen de plaza de mayo">
                 </div>
                 </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -72,8 +74,8 @@
     
     <footer class="footer">
         <div class="footer__redes">
-            <img src="recursos/Facebook-logo-1-500x313.png"class="footer__redes__uno"/>
-            <img src="recursos/instagram_icon_logo-500x281.png"class="footer__redes__dos"/>
+            <img src="recursos/facebook.png"class="footer__redes__uno"/>
+            <img src="recursos/instagram.png"class="footer__redes__dos"/>
         </div>
         <p class="footer__texto">Todos los derechos reservados</p>
     </footer>
