--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"content="administracion consorcios, consorcios, propiedad horizontal, prehorizontalidad, honorarios administracion consorcios, administracion consorcios belgrano, consorcios villa urquiza, administracion consorcios ley, administrador consorcios, gcba administradores consorcios, caphai, consejo propietarios, asambleas de consorcio">
+    <meta name="description"content="Actitud proactiva en el mantenimiento del patrimonio. Eficiente solucion a las dificultades y conflictos de cada consorcio. Amabilidad en el trato hacia los consorcistas. Excelentes proveedores en todos los rubros ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Actitud</title>
+    <title>Actitud proactiva Estudio BA Resolucion de conflictos</title>
 </head>
 <body>
 
@@ -82,8 +84,8 @@
  
   <footer class="footer">
       <div class="footer__imagenes">
-          <img src="../recursos/Facebook-logo-1-500x313.png"class="footer__redes__uno"/> 
-          <img src="../recursos/instagram_icon_logo-500x281.png"class="footer__redes__dos"/> 
+          <img src="../recursos/facebook.png"class="footer__redes__uno"/> 
+          <img src="../recursos/instagram.png"class="footer__redes__dos"/> 
       </div>
         <p class="footer__texto">Todos los derechos reservados</p>
   </footer> 
