--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"content="administracion consorcios, consorcios, propiedad horizontal, prehorizontalidad, honorarios administracion consorcios, administracion consorcios belgrano, consorcios villa urquiza, administracion consorcios ley, administrador consorcios, gcba administradores consorcios, consejo propietarios, asambleas de consorcios">
+    <meta name="description"content="Nos Dedicamos Íntegramente a la Administración de Consorcios de los barrios Microcentro, Recoleta, Belgrano y Villa Urquiza de la Ciudad de Buenos Aires. Admnistramos edificios en un rango de 16 a 150 unidades funcionales. Tomamos edificios en estado de prehorizontalidad.S">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Galeria</title>
+    <title>Galeria Estudio BA Dale una mirada a nuestros Consorcios</title>
 </head>
 
 <body>
@@ -29,7 +31,7 @@
     <main>
         <section>
             <div class="portada__textoGaleria"> 
-                <p class="texto__galeria">Nuestros Consorcios</p> 
+                <p class="texto__galeria">Consorcios Administrados</p> 
              </div>
         </section>     
         <section class="grid__container__1galeria"> 
@@ -46,8 +48,8 @@
 
     <footer class="footer">
         <div class="footer__redes">
-            <img src="../recursos/Facebook-logo-1-500x313.png"class="footer__redes__uno"/> 
-            <img src="../recursos/instagram_icon_logo-500x281.png"class="footer__redes__dos"/> 
+            <img src="../recursos/facebook.png"class="footer__redes__uno"/> 
+            <img src="../recursos/instagram.png"class="footer__redes__dos"/> 
         </div>
         <p class="footer__texto">Todos los derechos reservados</p>
     </footer>
