--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"content="administracion consorcios eficiencia transparecia, consorcios, propiedad horizontal, honorarios administracion consorcios, administracion consorcios belgrano, administracion consorcios villa urquiza, ley 941,administracion consorcios ley, administrador consorcios, gcba administradores consorcios, consejo propietarios, asambleas de consorcios">
+    <meta name="description"content="Nos Dedicamos Íntegramente a la Administración de Consorcios de Manera Eficiente y Transparente. Somos un equipo de profesionales de la Propiedad Horizontal">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Nosotros</title>
+    <title>Nosotros Estudio BA Conoce nuestra Administracion</title>
 </head>
 <body>
 
@@ -79,8 +81,8 @@
 
     <footer class="footer">
          <div class="footer__redes">
-            <img src="../recursos/Facebook-logo-1-500x313.png"class="footer__redes__uno"/> 
-            <img src="../recursos/instagram_icon_logo-500x281.png"class="footer__redes__dos"/> 
+            <img src="../recursos/facebook.png"class="footer__redes__uno"/> 
+            <img src="../recursos/instagram.png"class="footer__redes__dos"/> 
         </div>
         <p class="footer__texto">Todos los derechos reservados</p>
     </footer> 
