--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"content="administracion consorcios, consorcios, propiedad horizontal, prehorizontalidad, honorarios administracion consorcios, administracion consorcios belgrano, consorcios villa urquiza, administracion consorcios ley, administrador consorcios, gcba administradores consorcios, consejo propietarios, asambleas de consorcios">
-    <meta name="description"content="Nos Dedicamos Íntegramente a la Administración de Consorcios de los barrios Microcentro, Recoleta, Belgrano y Villa Urquiza de la Ciudad de Buenos Aires. Admnistramos edificios en un rango de 16 a 150 unidades funcionales. Tomamos edificios en estado de prehorizontalidad.S">
+    <meta name="description"content="Nos Dedicamos Íntegramente a la Administración de Consorcios de los barrios Microcentro, Recoleta, Belgrano y Villa Urquiza de la Ciudad de Buenos Aires. Admnistramos edificios en un rango de 16 a 150 unidades funcionales. Tomamos edificios en estado de prehorizontalidad.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Galeria Estudio BA Dale una mirada a nuestros Consorcios</title>
