Se aplico grids a la pagina contacto

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -29,22 +29,13 @@
     </header>
 
     <main>
-        <section class="contacto">
-                 <div class="contacto__imagen">
-                   <div>
-                        <img src="../recursos/contacto/contacto__1.jpg" class="key1-contacto">
-                    <div>   
-                    <div>    
-                        <img src="../recursos/contacto/contacto__2.jpg" class="key2-contacto">
-                    </div>
-                    <div>
-                         <img src="../recursos/contacto/contacto__5.jpg" class="key3-contacto">
-                    </div>
-                    <div> 
-                        <img src="../recursos/contacto/contacto__6.jpg" class="key4-contacto">
-                    </div>
-                </div>
-    
+        <section class="grid__container__1contacto">
+                <div class="grid__item grid__catorce key1-contacto"></div>
+                <div class="grid__item grid__quince key2-contacto "></div>
+                <div class="grid__item grid__dieciseis key3-contacto"></div>
+                <div class="grid__item grid__diecisiete key4-contacto"></div> 
+        </section>
+        <section> 
                 <div class="contacto__texto">
                 <p>Te proponemos una entrevista personal y la elaboración de una propuesta particularizada de administración estudiando los temas que hacen a vuestro interés.</p>
                 </div>
