Se continuo mejorando el diseño

--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -14,10 +14,10 @@
 <body>
     <header class="header">
         <div class="header">  
-            <img src="../recursos/logo.png" class="headerLogo"/>
+            <img src="../recursos/logo.png" class="header__logo"/>
             <h1 class="tituloh1">Nuestro Portfolio </h1>  
         </div> 
-        <nav class="navegadorIndex">            
+        <nav class="navegador">            
             <span><a href="../index.html">Inicio</a></span>
             <span><a href="nosotros.html">Nosotros</a></span>
             <span><a href="galeria.html">Galeria</a></span>
@@ -76,26 +76,26 @@
             </div>
         </section>
         <section>
-            <div class=GaleriaLinkContactoTexto">   
-                <h2>Descubre nuestra forma de administrar y Contactanos !</h2>
+            <div>   
+                <h2 class="linkContactoGaleria" >Descubre nuestra forma de administrar y Contactanos !</h2>
            </div>
            <div>
-            <button class="btn"><a href="contacto.html"class="boton">Contacto</a></button>
+            <button class="btn__galeria"><a href="contacto.html"class="btn__galeria_texto">Contacto</a></button>
            </div>  
         </section>
     </main>
 
     <footer class="footer">
                
-        <div class="redes-footer">
+        <div class="footer__redes">
             <a href="https://www.instagram.com/" target="_blank">
-                <img src="../recursos/instagram.png" class="instagram"alt=""></a>
+                <img src="../recursos/instagram.jpg" class="instagram"alt=""></a>
 
             <a href="https://www.facebook.com/" target="_blank">
                 <img src="../recursos/facebook.png" class="facebook"alt=""></a>
         </div>
               
-        <nav class="navegador-footer">            
+        <nav class="navegador">            
             <span><a href="../index.html">Inicio</a></span>
             <span><a href="nosotros.html">Nosotros</a></span>
             <span><a href="galeria.html">Galeria</a></span>
