Se hicieron modificaciones en el codigo

--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -85,7 +85,7 @@
     <section class="container__actitud3">   
 
       </div class="grid__item grid__dos">
-          <img src="../recursos/actitud_4.jpg" class="grid__item grid__dos imagen">
+          <img src="../recursos/actitud_4.jpg" class="imagen">
       <div>
       <div class="grid__item grid__uno">   
       
