--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -36,27 +36,27 @@
 
             <div class="grid__item grid__uno">
                 <div class="text-container">
-                    <p class="grid__texto">Somos los mejores</p>
+                    <p class="texto">Somos los mejores</p>
                 </div>
             </div>
             
             <div class="grid__item grid__dos">
                 <div class="text-container">
-                    <p class="grid__texto">Somos  empaticos</p>
+                    <p class="texto">Somos  empaticos</p>
                 </div>
             </div>
             <div class="grid__item grid__tres">
                 <div class="text-container">
-                    <p class="grid__texto">Somos eficientes</p>
+                    <p class="texto">Somos eficientes</p>
                 </div>    
             </div>
             <div class="grid__item grid__cuatro">
                 <div class="text-container">
-                    <p class="grid__texto">Somos honestos</p>
+                    <p class="texto">Somos honestos</p>
                 </div> 
             </div>
             <div class="grid__item grid__cinco">
-                <p class="grid__texto1">Desde el año 1996, nos desempeñamos como administradores en Consorcios de Propiedad Horizontal ubicados en la Ciudad de Buenos Aires.  Desarrollamos esta actividad en oficinas ubicadas en el microcentro, apoyada por consultores contables y legales. </p>
+                <p class="texto1">Desde el año 1996, nos desempeñamos como administradores en Consorcios de Propiedad Horizontal ubicados en la Ciudad de Buenos Aires.  Desarrollamos esta actividad en oficinas ubicadas en el microcentro, apoyada por consultores contables y legales. </p>
             </div>
         </section>  
 
