Se borraron imagenes no usadas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="header">
-            <img src="recursos/logo.png" class="logo"/>
+            <img src="recursos/logo.png" class="logo" alt="Logo"/>
             <h1 class="tituloh1">Estudio Baires </h1>  
         </div> 
         <nav class="navegador">            
@@ -89,9 +89,9 @@
     <footer class="footer">
         <div class="footer__redes">
             <a href="https://www.instagram.com/"target="_blank">
-                <img src="recursos/instagram.jpg" class="instagram" alt="logo de instagram"></a>
+                <img src="recursos/instagram.jpg" class="instagram" alt="logo instagram"></a>
             <a href="https://www.facebook.com/ "target="_blank">
-                <img src="recursos/facebook.png" class="facebook"alt="logo de facebook"></a>
+                <img src="recursos/facebook.png" class="facebook"alt="logo facebook"></a>
         </div>
               
         <nav class="navegador">            
