--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -14,7 +14,7 @@
 
   <header class="header">
     <div class="header">  
-        <img src="../recursos/logo.png" class="logo"/>
+        <img src="../recursos/logo.png" class="logo" alt="Logo"/>
         <h1 class="tituloh1">Actitud Proactiva </h1>  
     </div> 
     <nav class="navegador">            
@@ -90,7 +90,7 @@
     <!--texto e imagen aplicando grids-->
     <section class="container__actitud3">   
       </div class="grid__item grid__dos">
-          <img src="../recursos/actitud_4.jpg" class="imagenActitud" alt="">
+          <img src="../recursos/actitud_4.jpg" class="imagenActitud" alt="reunion">
       <div>
       <div class="grid__item grid__uno">   
         <p class="actitud__texto">. Honestidad y transparencia en el manejo de los fondos</p>
