--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -15,7 +15,7 @@
     
     <header class="header">
         <div class="header">  
-            <img src="../recursos/logo.png" class="logo"/>
+            <img src="../recursos/logo.png" class="logo" alt="Logo" />
             <h1 class="tituloh1">Contactanos</h1>  
         </div> 
         <nav class="navegador">            
@@ -35,7 +35,7 @@
         <!--texto e imagenes alicando grids y extend-->
         <section class="grid__container__contacto">
             <div class="grid__item  grid__uno   key1-contacto"></div>
-            <div class="grid__item  grid__uno__texto"><p class="textoGrid1           "> Cada edificio tiene un coordinador responsable para  el control de las actividades del consorcio, que se realiza mediante visitas periódicas. En estas se constatan, el estado de la propiedad, el cumplimiento de horarios y tareas asignadas, entre otros. Asimismo la realización de los trabajos de los contratistas y la verificación del funcionamiento de equipos.  </p></div>
+            <div class="grid__item  grid__uno__texto"><p class="textoGrid1"> Cada edificio tiene un coordinador responsable para  el control de las actividades del consorcio, que se realiza mediante visitas periódicas. En estas se constatan, el estado de la propiedad, el cumplimiento de horarios y tareas asignadas, entre otros. Asimismo la realización de los trabajos de los contratistas y la verificación del funcionamiento de equipos.  </p></div>
             <div class="grid__item  grid__dos  key2-contacto"></div>
             <div class="grid__item  grid__tres key3-contacto"></div>
             <div class="grid__item  grid__dos__texto "><p class="textoGrid">Sus problemas son nuestros desafíos y sus pendientes nuestra ocupación.</p></div>
