--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="header">  
-            <img src="../recursos/logo.png" class="logo"/>
+            <img src="../recursos/logo.png" class="logo"alt="Logo" />
             <h1 class="tituloh1">Nuestro Portfolio </h1>  
         </div> 
         <nav class="navegador">            
