--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -14,7 +14,7 @@
 
     <header class="header">
         <div class="header">  
-            <img src="../recursos/logo.png" class="logo"/>
+            <img src="../recursos/logo.png" class="logo"alt="Logo"/>
             <h1 class="tituloh1">Acerca de Nosotros </h1>  
         </div> 
         <nav class="navegador">            
@@ -71,7 +71,7 @@
                 <p class="nosotros__p">. Titulo de Arquitecta, expedido por la Fac. de Arquitectura y Urbanismo de la U.B.A. (2002)</p>
             </div>
             <div class= "grid__item grid__dos "></div>
-            <div class= "grid__item grid__tres "><img src="../recursos/nosotros_6.png" class="imagenCaphai"></div> 
+            <div class= "grid__item grid__tres "><img src="../recursos/nosotros_6.png" class="imagenCaphai" alt="Fachada CAPHAI"></div> 
             <div class="grid__item grid__cuatro border">  
                 <h4 class="nosotrosTituloh4">Antecedetes profesionales</h4>
                 <p class="nosotros__p">. Inscripta en el Registro de Administradores de la CABA con el registro 2810.</p>
@@ -81,7 +81,7 @@
 
             <!--link externo-->
             <div class="grid__item grid__cinco">
-                <a href="https://caphai.com.ar/" ><img src="../recursos/caphai.png" class="p__link"></a>
+                <a href="https://caphai.com.ar/" ><img src="../recursos/caphai.png" class="p__link" alt="Logo CAPHAI "></a>
             </div>
         </section>
         
@@ -100,9 +100,9 @@
     <footer class="footer">
         <div class="footer__redes">
             <a href="https://www.instagram.com/" target="_blank">
-                <img src="../recursos/instagram.jpg" class="instagram"alt="Logo de instagram"></a>
+                <img src="../recursos/instagram.jpg" class="instagram"alt="Logo instagram"></a>
             <a href="https://www.facebook.com/" target="_blank">
-                <img src="../recursos/facebook.png" class="facebook"alt="Logo de facebook"></a>
+                <img src="../recursos/facebook.png" class="facebook"alt="Logo facebook"></a>
         </div>
               
         <nav class="navegador">            
