Se modifico grid actitud

--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -34,7 +34,7 @@
      <!--carousel y texto aplicando gridS-->
     <section class="container__actitud1"> 
       <div class="container-fluid1 grid__item grid__dos">
-        <p class="container__texto" > Contamos con un registro completo de contratistas que nos dan la garantía de confianza. Personal en plomería, calefacción, calderas, electricidad, ascensores, albañilería, obras civiles, pintura, gas, mantenimiento en espacios verdes, vigilancia y seguridad, etc. que a la hora de licitar se logran los presupuestos más eficientes con las debidas garantías. Frente a éstos se suman los que pudieran presentar los co-propietarios, los que serán evaluados en condiciones de igualdad. Se realiza el control de pólizas de seguros y contratos de ART de los proveedores.  </p>
+        <p class="container__texto1" > Contamos con un registro completo de contratistas que nos dan la garantía de confianza. Personal en plomería, calefacción, calderas, electricidad, ascensores, albañilería, obras civiles, pintura, gas, mantenimiento en espacios verdes, vigilancia y seguridad, etc. que a la hora de licitar se logran los presupuestos más eficientes con las debidas garantías. Frente a éstos se suman los que pudieran presentar los co-propietarios, los que serán evaluados en condiciones de igualdad. Se realiza el control de pólizas de seguros y contratos de ART de los proveedores.  </p>
       </div>
       <div>     
         <section class="container-fluid1  grid__item grid__uno">
@@ -72,7 +72,7 @@
     <section class="container__actitud2">       
         <article class="row aling-items-center">    
             <div class="col-xl-4 col-md-6 col-sm-12">
-                <p class="container__texto"> Realizamos el mantenimiento del inmueble, contratación de profesionales para el asesoramiento y cotización de trabajos a realizar, auditorias del correcto funcionamiento de los bienes muebles e inmuebles, supervisión periódica de las reparaciones necesarias</p>
+                <p class="container__texto2"> Realizamos el mantenimiento del inmueble, contratación de profesionales para el asesoramiento y cotización de trabajos a realizar, auditorias del correcto funcionamiento de los bienes muebles e inmuebles, supervisión periódica de las reparaciones necesarias</p>
             </div>  
             <div class="col-xl-4 col-md-6 col-sm-12 ">
                 <p class="container__texto" >Creemos que la atención al cliente es un elemento clave en nuestro trabajo. Por este motivo, personal y telefónicamente, ponemos a su disposición nuestros recursos humanos. A su vez, hacemos una responsable labor informativa de todas las novedades.</p>
