Se modifico grid actitud

--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -72,7 +72,7 @@
     <section class="container__actitud2">       
         <article class="row aling-items-center">    
             <div class="col-xl-4 col-md-6 col-sm-12">
-                <p class="container__texto2"> Realizamos el mantenimiento del inmueble, contratación de profesionales para el asesoramiento y cotización de trabajos a realizar, auditorias del correcto funcionamiento de los bienes muebles e inmuebles, supervisión periódica de las reparaciones necesarias</p>
+                <p class="container__texto2"> Realizamos el mantenimiento del inmueble, contratación de profesionales para el asesoramiento y cotización de trabajos a realizar, auditorias del correcto funcionamiento de los bienes muebles e inmuebles, supervisión periódica de las reparaciones.</p>
             </div>  
             <div class="col-xl-4 col-md-6 col-sm-12 ">
                 <p class="container__texto" >Creemos que la atención al cliente es un elemento clave en nuestro trabajo. Por este motivo, personal y telefónicamente, ponemos a su disposición nuestros recursos humanos. A su vez, hacemos una responsable labor informativa de todas las novedades.</p>
