--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -34,7 +34,7 @@
      <!--carousel y texto aplicando gridS-->
     <section class="container__actitud1"> 
       <div class="container-fluid1 grid__item grid__dos">
-        <p class="container__texto1" > Contamos con un registro completo de contratistas que nos dan la garantía de confianza. Personal en plomería, calefacción, calderas, electricidad, ascensores, albañilería, obras civiles, pintura, gas, mantenimiento en espacios verdes, vigilancia y seguridad, etc. que a la hora de licitar se logran los presupuestos más eficientes con las debidas garantías. Frente a éstos se suman los que pudieran presentar los co-propietarios, los que serán evaluados en condiciones de igualdad. Se realiza el control de pólizas de seguros y contratos de ART de los proveedores.  </p>
+        <p class="container__texto1" > Contamos con un registro completo de contratistas que nos dan garantía de confianza. Personal en plomería, calefacción, calderas, electricidad, ascensores, albañilería, obras civiles, pintura, gas, mantenimiento en espacios verdes, vigilancia y seguridad, etc. que a la hora de licitar se logran los presupuestos más eficientes con las debidas garantías. Frente a éstos se suman los que pudieran presentar los co-propietarios, los que serán evaluados en condiciones de igualdad. Se realiza el control de pólizas de seguros y contratos de ART de los proveedores.  </p>
       </div>
       <div>     
         <section class="container-fluid1  grid__item grid__uno">
