--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -75,10 +75,10 @@
                 <p class="container__texto2"> Realizamos el mantenimiento del inmueble, contratación de profesionales para el asesoramiento y cotización de trabajos a realizar, auditorias del correcto funcionamiento de los bienes muebles e inmuebles, supervisión periódica de las reparaciones.</p>
             </div>  
             <div class="col-xl-4 col-md-6 col-sm-12 ">
-                <p class="container__texto" >Creemos que la atención al cliente es un elemento clave en nuestro trabajo. Por este motivo, personal y telefónicamente, ponemos a su disposición nuestros recursos humanos. A su vez, hacemos una responsable labor informativa de todas las novedades.</p>
+                <p class="container__texto2" >Creemos que la atención al cliente es un elemento clave en nuestro trabajo. Por este motivo, personal y telefónicamente, ponemos a su disposición nuestros recursos humanos. A su vez, hacemos una responsable labor informativa de todas las novedades.</p>
             </div>
             <div class="col-xl-4 col-md-6 col-sm-12 ">
-                <p class="container__texto">Digitalizamos los comprobantes de cada gasto del edificio y otorgamos al propietario su acceso online. Buscamos facilitar la información y que refleje la honestidad de nuestro trabajo. Centramos nuestro objetivo del en proteger la economía del cliente.</p>           
+                <p class="container__texto2">Digitalizamos los comprobantes de cada gasto del edificio y otorgamos al propietario su acceso online. Buscamos facilitar la información y que refleje la honestidad de nuestro trabajo. Centramos nuestro objetivo del en proteger la economía del cliente.</p>           
               </div>
         </article>
     </section> 
