se modifico titulo de nosotros

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="header">  
             <img src="../recursos/logo.png" class="logo"alt="Logo"/>
-            <h1 class="tituloh1">Acerca de Nosotros </h1>  
+            <h1 class="tituloh1">Quienes somos </h1>  
         </div> 
         <nav class="navegador">            
             <span><a href="../index.html">Inicio</a></span>
