Se modificon media queris

--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -18,11 +18,11 @@
         <h1 class="tituloh1">Actitud Proactiva </h1>  
     </div> 
     <nav class="navegador">            
-        <span><a href="../index.html">Inicio</a></span>
-        <span><a href="nosotros.html">Nosotros</a></span>
-        <span><a href="galeria.html">Galeria</a></span>
-        <span><a href="actitud.html">Actitud</a></span>
-        <span><a href="contacto.html">Contacto</a></span>                             
+        <p><a href="../index.html">Inicio</a></p>
+        <p><a href="nosotros.html">Nosotros</a></p>
+        <p><a href="galeria.html">Galeria</a></p>
+        <p><a href="actitud.html">Actitud</a></p>
+        <p><a href="contacto.html">Contacto</a></p>                             
     </nav>     
   </header>     
      
@@ -31,13 +31,13 @@
       <h2 Class="actitudTituloh2">Conoce nuestra administracion</h2> 
     </div>
 
-     <!--carousel y texto aplicando gridS-->
+     <!--texto y carousel de boostrack aplicando gridS-->
     <section class="container__actitud1"> 
-      <div class="container-fluid1 grid__item grid__dos">
+      <div class="grid__item grid__uno">
         <p class="container__texto1" > Contamos con un registro completo de contratistas que nos dan garantía de confianza. Personal en plomería, calefacción, calderas, electricidad, ascensores, albañilería, obras civiles, pintura, gas, mantenimiento en espacios verdes, vigilancia y seguridad, etc. que a la hora de licitar se logran los presupuestos más eficientes con las debidas garantías. Frente a éstos se suman los que pudieran presentar los co-propietarios, los que serán evaluados en condiciones de igualdad. Se realiza el control de pólizas de seguros y contratos de ART de los proveedores.  </p>
       </div>
-      <div>     
-        <section class="container-fluid1  grid__item grid__uno">
+      <div class= "grid__item grid__dos">     
+        <section class="container-fluid1">
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -124,11 +124,11 @@
     </div>
           
     <nav class="navegador">            
-        <span><a href="../index.html">Inicio</a></span>
-        <span><a href="nosotros.html">Nosotros</a></span>
-        <span><a href="galeria.html">Galeria</a></span>
-        <span><a href="actitud.html">Actitud</a></span>
-        <span><a href="contacto.html">Contacto</a></span>                             
+        <p><a href="../index.html">Inicio</a></p>
+        <p><a href="nosotros.html">Nosotros</a></p>
+        <p><a href="galeria.html">Galeria</a></p>
+        <p><a href="actitud.html">Actitud</a></p>
+        <p><a href="contacto.html">Contacto</a></p>                             
     </nav>    
   </footer>
 
