--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -18,11 +18,11 @@
             <h1 class="tituloh1">Nuestro Portfolio </h1>  
         </div> 
         <nav class="navegador">            
-            <span><a href="../index.html">Inicio</a></span>
-            <span><a href="nosotros.html">Nosotros</a></span>
-            <span><a href="galeria.html">Galeria</a></span>
-            <span><a href="actitud.html">Actitud</a></span>
-            <span><a href="contacto.html">Contacto</a></span>                             
+            <p><a href="../index.html">Inicio</a></p>
+            <p><a href="nosotros.html">Nosotros</a></p>
+            <p><a href="galeria.html">Galeria</a></p>
+            <p><a href="actitud.html">Actitud</a></p>
+            <p><a href="contacto.html">Contacto</a></p>                             
         </nav>     
     </header>     
 
@@ -96,11 +96,11 @@
         </div>
               
         <nav class="navegador">            
-            <span><a href="../index.html">Inicio</a></span>
-            <span><a href="nosotros.html">Nosotros</a></span>
-            <span><a href="galeria.html">Galeria</a></span>
-            <span><a href="actitud.html">Actitud</a></span>
-            <span><a href="contacto.html">Contacto</a></span>                             
+            <p><a href="../index.html">Inicio</a></p>
+            <p><a href="nosotros.html">Nosotros</a></p>
+            <p><a href="galeria.html">Galeria</a></p>
+            <p><a href="actitud.html">Actitud</a></p>
+            <p><a href="contacto.html">Contacto</a></p>                             
         </nav>    
     </footer>
     
