Se modifico media queris de celular

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div><h1 class="tituloh1">Estudio Baires</h1></div>  
         </div> 
         <nav class="navegador">            
-            <p><a href="index.html">Inicio</a></span>
+            <p><a href="index.html">Inicio</a></p>
             <p><a href="paginas/nosotros.html">Nosotros</a></p>
             <p><a href="paginas/galeria.html">Galeria</a></p>
             <p><a href="paginas/actitud.html">Actitud</a></p>
