--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -28,7 +28,7 @@
      
   <main >
     <div> 
-      <h2 Class="actitudTituloh2">Conoce nuestra administracion</h2> 
+      <h2 Class="actitudTituloh2">Como trabajamos</h2> 
     </div>
 
      <!--texto y carousel de boostrack aplicando gridS-->
