--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -14,8 +14,8 @@
 
     <header class="header">
         <div class="header">  
-            <img src="../recursos/logo.png" class="logo"alt="Logo"/>
-            <h1 class="tituloh1">Quienes somos </h1>  
+            <div><img src="../recursos/logo.png" class="logo"alt="Logo"/></div>
+            <div><h1 class="tituloh1">Quienes somos </h1></div>  
         </div> 
         <nav class="navegador">            
             <p><a href="../index.html">Inicio</a></p>
@@ -28,7 +28,7 @@
 
     <main>
         <div>
-            <h2 class="nosotrosTituloh2">Conoce nuestra forma de administrar</h2> 
+            <h2 class="nosotrosTituloh2">Acerca de Nosotros</h2> 
         </div>
 
         <!--imagenes con texto aplicando gridS-->
