Se modificaron tamaños de key

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -52,19 +52,19 @@
                 <form method="post"> 
                     <div class="contacto__imput">
                         <label for="Nombre">Nombre</label> 
-                        <input placeholder="Nombre"/>
+                        <input placeholder="Nombre"class="contacto__imput1"/>
                     </div>
                     <div class="contacto__imput" >
                         <label for="@email">@email</label>
-                        <input placeholder="@email"/>
+                        <input placeholder="@email"class="contacto__imput1"/>
                     </div>
                     <div class="contacto__imput" >
                         <label for="Telefono">Telefono</label>
-                        <input placeholder="Telefono"/>
+                        <input placeholder="Telefono"class="contacto__imput1"/>
                     </div>
                     <div class="contacto__imput" >
                         <label for="Comentarios">Comentarios</label>                                                         
-                        <input placeholder="Comentarios"/>
+                        <input placeholder="Comentarios"class="contacto__imput2"/>
                     </div>
                     <divs class="contacto__imput" >
                         <input type="submit" value="Enviar Formulario"/>
