Se reviso nesting

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -13,9 +13,9 @@
 
 <body>
     
-    <header class="header">
+    <header>
         <div class="header">  
-            <img src="../recursos/logo.png" class="logo" alt="Logo" />
+            <img src="../recursos/logo.png" class="header__logo" alt="Logo" />
             <h1 class="tituloh1">Contactanos</h1>  
         </div> 
         <nav class="navegador">            
@@ -29,17 +29,17 @@
 
     <main>
         <div >
-            <h2 class="contactoTituloh2">No dudes en comunicarte !!!!</h2> 
+            <h2 class="tituloh2">No dudes en comunicarte !!!!</h2> 
         </div>
 
         <!--texto e imagenes alicando grids y extend-->
-        <section class="grid__container__contacto">
-            <div class="grid__item  grid__uno   key1-contacto"></div>
-            <div class="grid__item  grid__uno__texto"><p class="textoGrid1"> Cada edificio tiene un coordinador responsable para  el control de las actividades del consorcio, que se realiza mediante visitas periódicas. En estas se constatan, el estado de la propiedad, el cumplimiento de horarios y tareas asignadas, entre otros. Asimismo la realización de los trabajos de los contratistas y la verificación del funcionamiento de equipos.  </p></div>
-            <div class="grid__item  grid__dos  key2-contacto"></div>
-            <div class="grid__item  grid__tres key3-contacto"></div>
-            <div class="grid__item  grid__dos__texto "><p class="textoGrid">Sus problemas son nuestros desafíos y sus pendientes nuestra ocupación.</p></div>
-            <div class="grid__item  grid__tres__texto"><p class="textoGrid">Relizamos reunion de consejo y asambleas, presenciales y online por zoom</p></div>
+        <section class="container__contacto">
+            <div class="container__contacto__uno   key1-contacto"></div>
+            <div class="container__contacto__uno__texto"><p class="textoGrid1"> Cada edificio tiene un coordinador responsable para  el control de las actividades del consorcio, que se realiza mediante visitas periódicas. En estas se constatan, el estado de la propiedad, el cumplimiento de horarios y tareas asignadas, entre otros. Asimismo la realización de los trabajos de los contratistas y la verificación del funcionamiento de equipos. Cada edificio tiene un coordinador responsable para  el control de las actividades del consorcio, que se realiza mediante visitas periódicas. En estas se constatan, el estado de la propiedad </div>
+            <div class="container__contacto__dos key2-contacto"></div>
+            <div class="container__contacto__tres key3-contacto"></div>
+            <div class="container__contacto__dos__texto "><p class="textoGrid2">Sus problemas son nuestros desafíos y sus pendientes nuestra ocupación.</p></div>
+            <div class="container__contacto__tres__texto"><p class="textoGrid2">Relizamos reunion de consejo y asambleas, presenciales y online por zoom</p></div>
         </section>
 
         <div>
@@ -50,23 +50,23 @@
         <section >
             <div class="imput">
                 <form method="post"> 
-                    <div class="contacto__imput">
+                    <div class="imput__contacto">
                         <label for="Nombre">Nombre</label> 
-                        <input placeholder="Nombre"class="contacto__imput1"/>
+                        <input placeholder="Nombre"class="imput__contacto__uno"/>
                     </div>
-                    <div class="contacto__imput" >
+                    <div class="imput__contacto" >
                         <label for="@email">@email</label>
-                        <input placeholder="@email"class="contacto__imput1"/>
+                        <input placeholder="@email"class="imput__contacto__uno"/>
                     </div>
-                    <div class="contacto__imput" >
+                    <div class="imput__contacto" >
                         <label for="Telefono">Telefono</label>
-                        <input placeholder="Telefono"class="contacto__imput1"/>
+                        <input placeholder="Telefono"class="imput__contacto__uno"/>
                     </div>
-                    <div class="contacto__imput" >
+                    <div class="imput__contacto" >
                         <label for="Comentarios">Comentarios</label>                                                         
-                        <input placeholder="Comentarios"class="contacto__imput2"/>
+                        <input placeholder="Comentarios"class="imput__contacto__dos"/>
                     </div>
-                    <divs class="contacto__imput" >
+                    <divs class="imput__contacto1" >
                         <input type="submit" value="Enviar Formulario"/>
                         <input type="reset" value="Limpiar Formulario"/>
                     </div>
