--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-    <header class="header">
+    <header>
         <div class="header">  
-            <div><img src="../recursos/logo.png" class="logo"alt="Logo"/></div>
+            <div><img src="../recursos/logo.png" class="header__logo"alt="Logo"/></div>
             <div><h1 class="tituloh1">Quienes somos </h1></div>  
         </div> 
         <nav class="navegador">            
@@ -28,32 +28,32 @@
 
     <main>
         <div>
-            <h2 class="nosotrosTituloh2">Acerca de Nosotros</h2> 
+            <h2 class="tituloh2">Acerca de Nosotros</h2> 
         </div>
 
         <!--imagenes con texto aplicando gridS-->
-        <section class="grid__container__nosotros1">
-            <div class="grid__item grid__uno">
+        <section class="container__nosotros1">
+            <div class="container__nosotros1__uno">
                 <div class="text-container">
                     <p class="texto">Somos los mejores</p>
                 </div>
             </div>
-            <div class="grid__item grid__dos">
+            <div class="container__nosotros1__dos">
                 <div class="text-container">
                     <p class="texto">Somos  empaticos</p>
                 </div>
             </div>
-            <div class="grid__item grid__tres">
+            <div class="container__nosotros1__tres">
                 <div class="text-container">
                     <p class="texto">Somos eficientes</p>
                 </div>    
             </div>
-            <div class="grid__item grid__cuatro">
+            <div class="container__nosotros1__cuatro">
                 <div class="text-container">
                     <p class="texto">Somos honestos</p>
                 </div> 
             </div>
-            <div class="grid__item grid__cinco">
+            <div class="container__nosotros1__cinco">
                 <p class="texto1">Desde el año 1996, nos desempeñamos como administradores en Consorcios de Propiedad Horizontal en la Ciudad Autonoma de Buenos Aires.  Desarrollamos esta actividad en oficinas ubicadas en el microcentro de la ciudad. Estamos apoyados por consultores contables y legales, que integran el staff de la Camara Argentina de la Propiedad Horizontal.</p>
             </div>
         </section>
@@ -63,16 +63,16 @@
         </div>
 
         <!--texto e imagenes alicando grids-->
-        <section class="grid__container__nosotros2">
-            <div class= "grid__item grid__uno border"> 
+        <section class="container__nosotros2">
+            <div class= "container__nosotros2__uno border"> 
                 <h4 class="nosotrosTituloh4">Estudios cursados</h4>
                 <p class="nosotros__p">. Asistencia a cursos de capacitacion en UBA y CAPHAI.</p>
                 <p class="nosotros__p">. Certificado de Asistencia al curso de Administración de propiedades dictado en la Cámara Argentina de la  Propiedad Horizontal  (2005)</p>
                 <p class="nosotros__p">. Titulo de Arquitecta, expedido por la Fac. de Arquitectura y Urbanismo de la U.B.A. (2002)</p>
             </div>
-            <div class= "grid__item grid__dos "></div>
-            <div class= "grid__item grid__tres "><img src="../recursos/nosotros_6.png" class="imagenCaphai" alt="Fachada CAPHAI"></div> 
-            <div class="grid__item grid__cuatro border">  
+            <div class="container__nosotros2__dos "></div>
+            <div class="container__nosotros2__tres "><img src="../recursos/nosotros_6.png" class="imagenCaphai" alt="Fachada CAPHAI"></div> 
+            <div class="container__nosotros2__cuatro border">  
                 <h4 class="nosotrosTituloh4">Antecedetes profesionales</h4>
                 <p class="nosotros__p">. Inscripta en el Registro de Administradores de la CABA con el registro 2810.</p>
                 <p class="nosotros__p">. Integrante del Consejo Directivo de la Cámara Argentina de la Propiedad Horizontal (2010-2022), con el cargo de Vocal Titular.</p>
@@ -80,18 +80,18 @@
             </div>
 
             <!--link externo-->
-            <div class="grid__item grid__cinco">
+            <div class="container__nosotros2__cinco">
                 <a href="https://caphai.com.ar/" ><img src="../recursos/caphai.png" class="p__link" alt="Logo CAPHAI "></a>
             </div>
         </section>
         
         <!--link pagina contacto aplicando transformaciones-->
-        <section>
+        <section class="link">
             <div>   
-                <h2 class="linkContactoNosotros">Descubre nuestra forma de administrar y Contactanos !</h2>
+                <h2 class="link__contacto">Descubre nuestra forma de administrar y Contactanos !</h2>
             </div>
             <div>
-               <button class="btn__nosotros"><a href="contacto.html"class="btn__nosotros__texto">Contacto</a></button>
+               <button class="btn"><a href="contacto.html"class="btn__texto">Contacto</a></button>
             </div> 
         </section>
         
