--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="header">
-            <div><img src="recursos/logo.png" class="logo" alt="Logo"/></div>
+            <div><img src="recursos/logo.png" class="header__logo" alt="Logo"/></div>
             <div><h1 class="tituloh1">Estudio Baires</h1></div>  
         </div> 
         <nav class="navegador">            
@@ -27,11 +27,11 @@
      
     <main>
         <div>
-            <h2 class="indexTituloh2">La mejor administracion de la bella Buenos Aires</h2> 
+            <h2 class="tituloh2">La mejor administracion de la bella Buenos Aires</h2> 
         </div>
 
           <!--carousel-->
-        <section class="container-fluid">
+        <section class="container-fluid" class="carousel">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -73,10 +73,10 @@
             </div> 
         </section>
 
-        <!-- Link pagina contacto aplicando transforaciones en el bpn-->
-        <section>
+        <!-- Link pagina contacto aplicando transforaciones en el btn-->
+        <section class="link">
             <div>   
-                <h3 class="linkContactoIndex">Descubre nuestra forma de administrar y Contactanos !</h3>
+                <h3 class="link__contacto">Descubre nuestra forma de administrar y Contactanos !</h3>
             </div>
             <div>
                <button class="btn"> <a href="paginas/contacto.html"class="btn__texto">Contacto</a></button>
