--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <div class="header">  
-            <img src="../recursos/logo.png" class="logo"alt="Logo" />
+            <img src="../recursos/logo.png" class="header__logo"alt="Logo" />
             <h1 class="tituloh1">Nuestro Portfolio </h1>  
         </div> 
         <nav class="navegador">            
@@ -28,47 +28,47 @@
 
     <main>
         <div >
-            <h2 Class="galeriaTituloh2" >Conoce nuestros consorcios</h2> 
+            <h2 Class="tituloh2" >Conoce nuestros consorcios</h2> 
         </div>
                
         <!--imagenes con texto aplicando grids area--> 
-        <section class="grid__container__galeria"> 
-            <div class="grid__item grid__uno">
+        <section class="container__galeria"> 
+            <div class="container__galeria__uno">
                 <div class="text-container">
                     <p class="gridTexto">Belgrano</p>
                 </div>
             </div>
-            <div class="grid__item grid__dos">
+            <div class="container__galeria__dos">
                 <div class="text-container">
                     <p class="gridTexto">Villa Urquiza</p>
                 </div>
             </div>
-            <div class="grid__item grid__tres">
+            <div class="container__galeria__tres">
                 <div class="text-container">
                     <p class="gridTexto">Saavedra</p>
                 </div>
             </div>
-            <div class="grid__item grid__cuatro">
+            <div class="container__galeria__cuatro">
                 <div class="text-container">
                     <p class="gridTexto">Recoleta</p>
                 </div>
             </div> 
-            <div class="grid__item grid__cinco">
+            <div class="container__galeria__cinco">
                 <div class="text-container">
                     <p class="gridTexto">Palermo</p>
                 </div>
             </div>
-            <div class="grid__item grid__seis">
+            <div class="container__galeria__seis">
                 <div class="text-container">
                     <p class="gridTexto">Retiro</p>
                 </div>
             </div>
-            <div class="grid__item grid__siete">
+            <div class="container__galeria__siete">
                 <div class="text-container">
                     <p class="gridTexto">Retiro</p>
                 </div>
             </div>
-            <div class="grid__item grid__ocho">
+            <div class="container__galeria__ocho">
                 <div class="text-container">
                     <p class="gridTexto">Microcentro</p>
                 </div>
@@ -76,12 +76,12 @@
         </section>
 
         <!--link pagina contacto aplicando transformaciones en btn-->
-        <section>
+        <section class="link">
             <div>   
-                <h2 class="linkContactoGaleria" >Descubre nuestra forma de administrar y Contactanos !</h2>
+                <h2 class="link__contacto" >Descubre nuestra forma de administrar y Contactanos !</h2>
            </div>
            <div>
-            <button class="btn__galeria"><a href="contacto.html"class="btn__galeria_texto">Contacto</a></button>
+            <button class="btn"><a href="contacto.html"class="btn__texto">Contacto</a></button>
            </div>  
         </section>
     </main>
