Se relizaron cambios en media querie de celular

--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -15,7 +15,7 @@
   <header>
     <div class="header">  
         <img src="../recursos/logo.png" class="header__logo" alt="Logo"/>
-        <h1 class="tituloh1">Actitud Proactiv </h1>  
+        <h1 class="tituloh1">Actitud Proactiva</h1>  
     </div> 
     <nav class="navegador">            
         <p><a href="../index.html">Inicio</a></p>
