--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -15,7 +15,7 @@
     <header>
         <div class="header">  
             <div><img src="../recursos/logo.png" class="header__logo"alt="Logo"/></div>
-            <div><h1 class="tituloh1">Quienes somo </h1></div>  
+            <div><h1 class="tituloh1">Quienes somos </h1></div>  
         </div> 
         <nav class="navegador">            
             <p><a href="../index.html">Inicio</a></p>
