--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -15,7 +15,7 @@
     <header>
         <div class="header">  
             <img src="../recursos/logo.png" class="header__logo"alt="Logo" />
-            <h1 class="tituloh1">Nuestro Portfoli </h1>  
+            <h1 class="tituloh1">Nuestro Portfolio</h1>  
         </div> 
         <nav class="navegador">            
             <p><a href="../index.html">Inicio</a></p>
