Se modifico media querie de celular

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -35,7 +35,7 @@
         <!--texto e imagenes alicando grids y extend-->
         <section class="container__contacto">
             <div class="container__contacto__uno   key1-contacto"></div>
-            <div class="container__contacto__uno__texto"><p class="textoGrid1"> Cada edificio tiene un coordinador responsable para  el control de las actividades del consorcio, que se realiza mediante visitas periódicas. En estas se constatan, el estado de la propiedad, el cumplimiento de horarios y tareas asignadas, entre otros. Asimismo la realización de los trabajos de los contratistas y la verificación del funcionamiento de equipos. Cada edificio tiene un coordinador responsable para  el control de las actividades del consorcio, que se realiza mediante visitas periódicas. En estas se constatan, el estado de la propiedad </div>
+            <div class="container__contacto__uno__texto"><p class="textoGrid1"> Cada edificio tiene un coordinador responsable para  el control de las actividades del consorcio, que se realiza mediante visitas periódicas. En estas se constatan, el estado de la propiedad, el cumplimiento de horarios y tareas asignadas, entre otros. Asimismo la realización de los trabajos de los contratistas y la verificación del funcionamiento de equipos. Privilegiamos el trato directo y la agilidad para resolver los problemas de su consorcio, respondiendo a los requerimientos de los co-propietarios con nuestra amplia experiencia.</div>
             <div class="container__contacto__dos key2-contacto"></div>
             <div class="container__contacto__tres key3-contacto"></div>
             <div class="container__contacto__dos__texto "><p class="textoGrid2">Sus problemas son nuestros desafíos y sus pendientes nuestra ocupación.</p></div>
